AM_CPPFLAGS = $(UG_CPPFLAGS)

noinst_LTLIBRARIES = libdevice_ps.la
libdevice_ps_la_SOURCES = postscript.cc postscriptbw.cc

#plugin_LTLIBRARIES = ps_device.la psbw_device.la
#
#ps_device_la_SOURCES = postscript.cc
#ps_device_la_LDFLAGS = -module -no-undefined -avoid-version
#
#psbw_device_la_SOURCES = postscriptbw.cc
#psbw_device_la_LDFLAGS = -module -no-undefined -avoid-version

